// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text deve renderizar corretamente 1`] = `
<span
  class="emotion-0"
>
  Test 1
</span>
`;

exports[`Text deve renderizar corretamente 2`] = `
<p
  class="emotion-0"
>
  Test with p tag
</p>
`;

exports[`Text deve renderizar corretamente 3`] = `
.emotion-0 {
  font-weight: bold;
}

<span
  class="emotion-0"
>
  Test weight
</span>
`;

exports[`Text deve renderizar corretamente 4`] = `
.emotion-0 {
  font-size: 2rem;
}

<span
  class="emotion-0"
>
  Test size
</span>
`;

exports[`Text deve renderizar corretamente 5`] = `
.emotion-0 {
  color: #056DFF;
}

<span
  class="emotion-0"
>
  Test color
</span>
`;
